--- a/service/php82/php.ini
+++ b/service/php82/php.ini
@@ -1917,17 +1917,22 @@ ldap.max_links = -1
 ; tab-width: 4
 ; End:
 
-[XDebug]
-xdebug.remote_enable = 1
-xdebug.remote_handler = "dbgp"
-; Set to host.docker.internal on Mac and Windows, otherwise, set to host real ip
-xdebug.remote_host = host.docker.internal
-;xdebug.remote_port = 9000
-xdebug.remote_log = /var/log/php/xdebug.log
+; swoole扩展配置
+[swoole]
+swoole.use_shortname=Off
 
-SERVER_ENV=develop
-
-yaf.use_spl_autoload=1
-
-[xhprof]
-;xhprof.output_dir = /var/log/php/xhprof.log
+; xdebug扩展配置
+[xdebug]
+# 启用调试模式
+xdebug.mode=debug,develop
+# 自动启动调试
+xdebug.start_with_request=yes
+# Docker容器中访问宿主机的地址
+xdebug.client_host=host.docker.internal
+# Xdebug 3默认端口
+xdebug.client_port=9599
+# IDE Key，与PHPStorm配置一致
+xdebug.idekey=xdebug
+# 调试日志（可选，用于排查问题）
+xdebug.log=/var/log/php/xdebug.log
+xdebug.log_level=3
