--- a/backup/env.sample
+++ b/backup/env.sample
@@ -70,8 +70,9 @@ RABBITMQ_PLUGINS=rabbitmq_amqp1_0
 
 # PHP82
 PHP82_VERSION=8.2.29
+PHP82_HOST_PORT=9500-9599:9500-9599
 PHP82_PHP_CONF_FILE=./service/php82/php.ini
 PHP82_FPM_CONF_FILE=./service/php82/php-fpm.conf
 PHP82_LOG_DIR=./logs/php82
 PHP82_DATA_COMPOSER=./data/composer
-PHP82_EXTENSIONS='pdo_mysql mysqli gd bcmath swoole xdebug redis xlswriter pcntl zip exif'
+PHP82_EXTENSIONS='pdo_mysql mysqli gd bcmath swoole-5.1.8 xdebug redis xlswriter pcntl zip exif'
