--- a/backup/env.sample
+++ b/backup/env.sample
@@ -52,7 +52,7 @@ MYSQL5_CONF_FILE=./service/mysql5/mysql.cnf
 MYSQL5_LOG_DIR=./logs/mysql5
 
 # MySQL8
-MYSQL8_VERSION=8.0.44
+MYSQL8_VERSION=8.0.45
 MYSQL8_HOST_PORT=3308
 MYSQL8_ROOT_PASSWORD=123456
 MYSQL8_ROOT_HOST=%
@@ -69,10 +69,16 @@ RABBITMQ_DEFAULT_PASS=mypass
 RABBITMQ_PLUGINS=rabbitmq_amqp1_0
 
 # PHP82
-PHP82_VERSION=8.2.29
+PHP82_VERSION=8.2.30
 PHP82_HOST_PORT=9500-9599:9500-9599
 PHP82_PHP_CONF_FILE=./service/php82/php.ini
 PHP82_FPM_CONF_FILE=./service/php82/php-fpm.conf
 PHP82_LOG_DIR=./logs/php82
 PHP82_DATA_COMPOSER=./data/composer
+PHP_IDE_CONFIG=serverName=xdebug
 PHP82_EXTENSIONS='pdo_mysql mysqli gd bcmath swoole-5.1.8 xdebug redis xlswriter pcntl zip exif'
+
+# Node
+NODE_VERSION=24.13.1-alpine
+NODE_ENV=production #development
+NODE_HOST_PORT=2800-2899:2800-2899
