--- a/service/php82/Dockerfile
+++ b/service/php82/Dockerfile
@@ -24,7 +24,7 @@ RUN curl -sSLf -o /usr/local/bin/install-php-extensions https://github.com/mloca
 && install-php-extensions $PHP_EXTENSIONS
 
 # Install composer and change it's cache home
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --stable
 ENV COMPOSER_HOME=/tmp/composer
 
 # Set work directory
