chore(config): 更新 Docker 配置和环境变量示例
- 在 docker-compose.sample.yaml 中添加 pnpm 全局安装命令到入口点
- 注释掉 env.sample 中的 CONTAINER_PACKAGE_URL 配置选项
- 注释掉 env.sample 中的 COMPOSER_URL 配置选项

--- a/backup/docker-compose.sample.yaml
+++ b/backup/docker-compose.sample.yaml
@@ -54,6 +54,7 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV}
       TZ: ${TZ}
+    entrypoint: ["sh", "-c", "npm install -g pnpm && tail -f /dev/null"]
     restart: always
     stdin_open: true
     tty: true
