--- a/backup/env.sample
+++ b/backup/env.sample
@@ -13,7 +13,7 @@ TZ=Asia/Shanghai
 # mirrors.tencent.com
 # mirrors.ustc.edu.cn
 # dl-cdn.alpinelinux.org
-CONTAINER_PACKAGE_URL=mirrors.ustc.edu.cn
+# CONTAINER_PACKAGE_URL=mirrors.ustc.edu.cn
 
 #
 # Composer 包获取地址 (可以为空、或以下其一)
@@ -22,7 +22,7 @@ CONTAINER_PACKAGE_URL=mirrors.ustc.edu.cn
 # mirrors.aliyun.com
 # mirrors.tencent.com
 # repo.packagist.org
-COMPOSER_URL=mirrors.tencent.com
+# COMPOSER_URL=mirrors.tencent.com
 
 # Nginx
 NGINX_VERSION=1.28.0-alpine
