``` build(nodejs): 重构 Node.js 服务构建方式
- 将 Node.js 服务从直接使用镜像改为使用 Dockerfile 构建
- 添加了 pnpm 包管理器的自动安装和配置
- 配置了国内 npm 镜像源以提高依赖安装速度
- 移除了旧的 entrypoint 命令行配置
- 添加了工作目录设置和 corepack 支持
```

--- a/backup/docker-compose.sample.yaml
+++ b/backup/docker-compose.sample.yaml
@@ -44,8 +44,11 @@ services:
         ipv4_address: 172.19.0.20
 
   nodejs:
-    image: node:${NODE_VERSION}
     container_name: nodejs
+    build:
+      context: ./service/nodejs
+      args:
+        NODE_VERSION: ${NODE_VERSION}
     ports:
       # 注意：大范围端口映射会影响 Docker 启动速度
       - "${NODE_HOST_PORT}"
@@ -54,7 +57,6 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV}
       TZ: ${TZ}
-    entrypoint: ["sh", "-c", "npm install -g pnpm && tail -f /dev/null"]
     restart: always
     stdin_open: true
     tty: true
